<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

// Spec §5.7: order unique per course (RULE-014). Progress references
// component_id, so reorder/removal never corrupts completions.
return new class extends Migration
{
    public function up(): void
    {
        Schema::create('lessons', function (Blueprint $table) {
            $table->id();
            $table->foreignId('course_id')->constrained()->cascadeOnDelete();
            $table->string('title');
            $table->text('content_reference')->nullable();
            $table->unsignedInteger('order');
            $table->timestamps();
            $table->unique(['course_id', 'order']);
            $table->index('course_id');
        });
    }

    public function down(): void
    {
        Schema::dropIfExists('lessons');
    }
};
